--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "DragonBoundRe - Remake of the original DragonBound game",
   "main": "index.js",
   "scripts": {
+    "start": "node src/web/main/server.js",
     "start:web": "node src/web/main/server.js",
     "start:game": "node src/game.js",
     "dev:web": "nodemon --exitcrash src/web/main/server.js",
