chore: unifique game

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ COOKIE_SECRET=xgamedev
 
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=rootpassword
+DB_PASSWORD=root
 DB_DATABASE=dragonbound
 DB_PORT=3306
 
