--- a/package.json
+++ b/package.json
@@ -43,21 +43,22 @@
     "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-handlebars": "^8.0.1",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.0",
     "fbgraph": "^0.1.0",
     "geoip-lite": "^1.4.10",
+    "handlebars": "^4.7.8",
+    "hbs": "^4.2.0",
     "helmet": "^7.1.0",
     "ignore-case": "^0.1.0",
     "md5": "^2.3.0",
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.11.0",
     "node-cron": "^3.0.3",
     "pngjs": "^7.0.0",
     "promise": "^8.3.0",
+    "rfdc": "^1.3.0",
     "setimmediate": "^1.0.5",
     "underscore": "^1.13.7",
     "uninstall": "^0.0.0",
